--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -50,11 +50,11 @@
                 <div class="col 2"></div>
                 <div class="col 8">
                   <div class="new">
-                      <h5>Extracted Text : {{orignalText}}</h5>
+                      <h5>Extracted Text :</h5>{{orignalText}}
                   </div>
                   <br><br>
                   <div class="result">
-                    <h5>sentiment score : {{score}}</h5>
+                    <h5>sentiment score : </h5>{{score}}
                   </div>
 
 
