--- a/UI/src/app/app.component.css
+++ b/UI/src/app/app.component.css
@@ -1,266 +1,339 @@
 *{
-  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
-body{
-  margin:0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size:1rem;
-  font-weight:normal;
-  line-height:1.5;
-  color:#333;
-  overflow-x:hidden;
-}
-
-.v-header{
-  height:80vh;
-  display:flex;
-  align-items:center;
-  color:#fff;
-
-}
-
-.container{
-  max-width:960px;
-  padding-left:1rem;
-  padding-right:1rem;
-  margin:auto;
-  text-align:center;
-}
-
-.fullscreen-video-wrap{
-  position:absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100vh;
-  overflow:hidden;
-  -webkit-box-shadow: -2px 13px 43px -20px rgba(22,144,153,1);
--moz-box-shadow: -2px 13px 43px -20px rgba(22,144,153,1);
-box-shadow: -2px 13px 43px -20px rgba(22,144,153,1);
-}
-
-.fullscreen-video-wrap video{
-  min-height:100%;
-  min-width:100%;
-}
-
-.header-overlay{
-  height:80vh;
-  position: absolute;
-  top:0;
-  left:0;
-  width:100vw;
-  z-index:1;
-  /* background:#225470; */
-  opacity:0.9;
-  background: #a8c0ff;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #3f2b96, #a8c0ff);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right,#0F2027,#203a43,
-#2c5364
-); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-}
-
-.header-content{
-  z-index:2;
-  padding-left: 150px;
-  padding-top: -200px;
-}
-
-.header-content h1{
-  font-size:60px;
-
-  padding-bottom:2rem;
-}
-
-/* .header-content p{
-  font-size:1.5rem;
-  display:block;
-
-
-} */
-
-.btn{
-  background: #34b3a0;
-  color:#fff;
-  font-size:1.2rem;
-  padding: 1rem 2rem;
-  text-decoration: none;
+.buttonClass {
+  width: 30%;
+  height: 50px;
+  margin-bottom: 85%;
+  margin-left: 30%;
+  margin-right: 35%;
+  border: none;
+  background: #404040;
+  color: #ffffff !important;
+  font-weight: 100;
+  /* padding: 20px; */
+  text-transform: uppercase;
   border-radius: 6px;
+  display: inline-block;
+  
+  }
+
+.buttonClass:hover {
+  color: #ee3f3f !important;
+  font-weight: 700 !important;
+  letter-spacing: 3px;
+  background: #cacaca;
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  transition: all 0.3s ease 0s;
+  }
+
+
+.chooseFileClass {
+  border: none;
+  background: #464242;
+  color: #ffffff !important;
+  font-weight: 100;
+  padding: 20px;
+  text-transform: uppercase;
+  border-radius: 6px;
+  display: inline-block;
+  }
+
+
+/* textarea {
+margin-top: 10px;
+margin-left: 50px;
+width: 500px;
+height: 100px;
+-moz-border-bottom-colors: none;
+-moz-border-left-colors: none;
+-moz-border-right-colors: none;
+-moz-border-top-colors: none;
+background: none repeat scroll 0 0 rgba(197, 50, 50, 0.07);
+border-color: -moz-use-text-color #FFFFFF #FFFFFF -moz-use-text-color;
+border-image: none;
+border-radius: 6px 6px 6px 6px;
+border-style: none solid solid none;
+border-width: medium 1px 1px medium;
+box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+color: #555555;
+font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+font-size: 1em;
+line-height: 1.4em;
+padding: 5px 8px;
+transition: background-color 0.2s ease 0s;
 }
 
-.section{
-  padding:20px 0;
+
+textarea:focus {
+  background: none repeat scroll 0 0 #FFFFFF;
+  outline-width: 0;
+}
+*/
+
+#textarea_1 {
+width:90%;
+/* overflow:hidden; */
+background-color:#FFF;
+color:#222;
+font-family:Courier, monospace;
+font-weight:normal;
+font-size:18px;
+resize:none;
+line-height:40px;
+/* padding-left:100px; */
+/* padding-right:100px; */
+margin-right:5%;
+margin-left:5%;
+/* margin-top:5%; */
+margin-bottom:5%;
+padding-top:45px;
+padding-bottom:34px;
+/* background-image:url(../assets/images/lines.png), url(../assets/images/paper.png); */
+background-repeat:repeat-y, repeat;
+-webkit-border-radius:12px;
+border-radius:12px;
+-webkit-box-shadow: 0px 2px 14px #000;
+box-shadow: 0px 2px 14px #000;
+border-top:1px solid #FFF;
+border-bottom:1px solid #FFF;
+}
+
+#outputContainer {
+width:90%;
+text-align: left;
+/* overflow:hidden; */
+background-color:#FFF;
+color:#222;
+font-family:Courier, monospace;
+font-weight:normal;
+font-size:14px;
+resize:none;
+line-height:40px;
+/* padding-left:100px; */
+/* padding-right:100px; */
+margin-right:5%;
+margin-left:5%;
+margin-top:5%;
+margin-bottom:5%;
+padding-top:45px;
+padding-left: 10px;
+padding-bottom:34px;
+/* background-image:url(../assets/images/paper.png); */
+background-repeat:repeat-y, repeat;
+background-repeat:repeat-x, repeat;
+-webkit-border-radius:12px;
+border-radius:12px;
+-webkit-box-shadow: 0px 2px 14px #000;
+box-shadow: 0px 2px 14px #000;
+border-top:1px solid #FFF;
+border-bottom:1px solid #FFF;
+}
+
+.inputOutputArea{
+height: 100%;
+width: 50%;
+display: flex;
+flex-direction: column;
+}
+
+#showLeft{
+height: 100%;
+width: 50%;
+display: flex;
+flex-direction: column;
+
+}
+
+.shift{
+display: flex;
+flex-direction: row;
+}
+
+img{
+margin-left: 20%;
+margin-right: 20%; 
+}
+
+.bodywrap {
+  z-index: -1000;
+  overflow: hidden;
+
+}
+.content {
+  position: absolute;
+  width: 100%;
+  min-height: 100%;
+  z-index: 1000;
+  margin-top: -550px;
+}
+
+section{
+  width: 100%;
+  height: 100vh;
+  /* background-image:linear-gradient(to right,#0F2027,#203a43,
+  #2c5364),url(../assets/images/back.jpg); */
+  background-image:linear-gradient(to right,#0F2027,#203a43,
+  #2c5364);
+  background-size: cover;
+  background-attachment:fixed;
 }
 
 h1{
+  overflow: hidden;
+  white-space: nowrap;
+  align-items : center;
+  width: 40ch;
+  position: absolute;
+  top: -10%;
+  left: 28%;
+  transform: translate(-10%, -10%);
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  margin: 0;
+  padding: 0;
+  font-size: 50px;
+  color: white;
+}
+
+.btn-hover {
+  width: 200px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+  margin: 20px;
+  height: 55px;
+  text-align:center;
+  border: none;
+  background-size: 300% 100%;
+
+  border-radius: 50px;
+  moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.btn-hover:hover {
+  background-position: 100% 0;
+  moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.btn-hover:focus {
+  outline: none;
+}
+
+.btn-hover.color-1 {
+  background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
+  box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+}
+.btn-hover.color-2 {
+  background-image: linear-gradient(to right, #f5ce62, #e43603, #fa7199, #e85a19);
+  box-shadow: 0 4px 15px 0 rgba(229, 66, 10, 0.75);
+}
+.btn-hover.color-3 {
+  background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7);
+  box-shadow: 0 4px 15px 0 rgba(116, 79, 168, 0.75);
+}
+.btn-hover.color-4 {
+  background-image: linear-gradient(to right, #fc6076, #ff9a44, #ef9d43, #e75516);
+  box-shadow: 0 4px 15px 0 rgba(252, 104, 110, 0.75);
+}
+.btn-hover.color-5 {
+  background-image: linear-gradient(to right, #0ba360, #3cba92, #30dd8a, #2bb673);
+  box-shadow: 0 4px 15px 0 rgba(23, 168, 108, 0.75);
+}
+.btn-hover.color-6 {
+  background-image: linear-gradient(to right, #009245, #FCEE21, #00A8C5, #D9E021);
+  box-shadow: 0 4px 15px 0 rgba(83, 176, 57, 0.75);
+}
+.btn-hover.color-7 {
+  background-image: linear-gradient(to right, #6253e1, #852D91, #A3A1FF, #F24645);
+  box-shadow: 0 4px 15px 0 rgba(126, 52, 161, 0.75);
+}
+.btn-hover.color-8 {
+  
+  background-image: linear-gradient(to right, #29323c, #485563, #2b5876, #4e4376);
+  box-shadow: 0 4px 15px 0 rgba(45, 54, 65, 0.75);
+}
+.btn-hover.color-9 {
+  background-image: linear-gradient(to right, #25aae1, #4481eb, #04befe, #3f86ed);
+  box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+}
+.btn-hover.color-10 {
+      background-image: linear-gradient(to right, #ed6ea0, #ec8c69, #f7186a , #FBB03B);
+  box-shadow: 0 4px 15px 0 rgba(236, 116, 149, 0.75);
+}
+.btn-hover.color-11 {
+     background-image: linear-gradient(to right, #eb3941, #f15e64, #e14e53, #e2373f);  box-shadow: 0 5px 15px rgba(242, 97, 103, .4);
+}
+
+
+/* =========================================================================================
+=========================================================================================== */
+
+.shift{
+  text-align:center;
+}
+
+input[type="file"] {
+  display: none;
+}
+.custom-file-upload {
+  /* border: 1px solid #ccc;
+  display: inline-block;
+  border-radius: 6px;
+  padding: 6px 12px;
+  cursor: pointer; */
+  margin: 10%;
   text-align: center;
-  margin-bottom: 0;
+  padding: 14px 15px;
+  font-size: 18px;
+
 }
 
-.section-b{
-  background:#333;
-  color:#fff;
+.choose{
+  margin-top: -6px;
+  margin-left: 300px;
 }
 
-@media(max-width:960px){
-  .container{
-    padding-right:3rem;
-    padding-left:3rem;
-  }
+.butext{
+  padding-top: 50px;
+  margin-left: -80px;
+}
+.cd1{
+  height: 400px;
+}
+.cd2{
+  margin-left: 20px;
+  background-color: white;
+  height: 400px;
+}
+.container{
+  margin-left: 100px;
+}
+h1{
+  margin-top: -40px;
+  margin-left: 200px;
 }
 
+.card1{
+  width: 600px;
+  height: 400px;
+  margin-left: 0px;
+}
 
-
-.buttons {
-    margin: 10%;
-    text-align: center;
-  }
-  
-  .btn-hover {
-    width: 200px;
-    font-size: 16px;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
-    margin: 20px;
-    height: 55px;
-    text-align:center;
-    border: none;
-    background-size: 300% 100%;
-  
-    border-radius: 50px;
-    moz-transition: all .4s ease-in-out;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-  }
-  
-  .btn-hover:hover {
-    background-position: 100% 0;
-    moz-transition: all .4s ease-in-out;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-  }
-  
-  .btn-hover:focus {
-    outline: none;
-  }
-  .btn-hover.color-1 {
-    background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
-    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
-  }
-  .btn-hover.color-2 {
-    background-image: linear-gradient(to right, #f5ce62, #e43603, #fa7199, #e85a19);
-    box-shadow: 0 4px 15px 0 rgba(229, 66, 10, 0.75);
-  }
-  .btn-hover.color-3 {
-    background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7);
-    box-shadow: 0 4px 15px 0 rgba(116, 79, 168, 0.75);
-  }
-  .btn-hover.color-4 {
-    background-image: linear-gradient(to right, #fc6076, #ff9a44, #ef9d43, #e75516);
-    box-shadow: 0 4px 15px 0 rgba(252, 104, 110, 0.75);
-  }
-  .btn-hover.color-5 {
-    background-image: linear-gradient(to right, #0ba360, #3cba92, #30dd8a, #2bb673);
-    box-shadow: 0 4px 15px 0 rgba(23, 168, 108, 0.75);
-  }
-  .btn-hover.color-6 {
-    background-image: linear-gradient(to right, #009245, #FCEE21, #00A8C5, #D9E021);
-    box-shadow: 0 4px 15px 0 rgba(83, 176, 57, 0.75);
-  }
-  .btn-hover.color-7 {
-    background-image: linear-gradient(to right, #6253e1, #852D91, #A3A1FF, #F24645);
-    box-shadow: 0 4px 15px 0 rgba(126, 52, 161, 0.75);
-  }
-  .btn-hover.color-8 {
-    background-image: linear-gradient(to right, #29323c, #485563, #2b5876, #4e4376);
-    box-shadow: 0 4px 15px 0 rgba(45, 54, 65, 0.75);
-  }
-  .btn-hover.color-9 {
-    background-image: linear-gradient(to right, #25aae1, #4481eb, #04befe, #3f86ed);
-    box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
-  }
-  .btn-hover.color-10 {
-        background-image: linear-gradient(to right, #ed6ea0, #ec8c69, #f7186a , #FBB03B);
-    box-shadow: 0 4px 15px 0 rgba(236, 116, 149, 0.75);
-  }
-  .btn-hover.color-11 {
-       background-image: linear-gradient(to right, #eb3941, #f15e64, #e14e53, #e2373f);  box-shadow: 0 5px 15px rgba(242, 97, 103, .4);
-  }
-  
-  .card{
-    width: 600px;
-    height: 500px;
-    padding-top: 0px;
-    box-shadow: 0 10px 20px 0 rgba(65, 132, 234, 0.75)
-  }
-  .card1{
-    width: 600px;
-    height: 400px;
-  
-  }
-  .card2{
-    width: 500px;
-    height: 500px;
-    box-shadow: 0 10px 20px 0 rgba(65, 132, 234, 0.75)
-  }
-  
-  .new{
-    padding-top: 50px;
-    margin-left: -150px;
-    
-  }
-
-  .result{
-    padding-top: 50px;
-    margin-left: -150px;
-    
-  }
-
-  .text{
-    width:450px;
-    height: 250px;
-    border: 2px solid grey;
-  }
-  
-  .shift{
-    margin-top: 40px;
-  }
-  .shift2{
-    margin-left: 100px;
-  }
-  
-  
-  .box1{
-    height: 200px;
-    width: 500px;
-    padding-top: 20px;
-  }
-  
-  
-  .contain{
-    padding-left: 20px;
-    padding-top: -80px;
-  }
-  
-  
-  input[type="file"] {
-    display: none;
-  }
-  .custom-file-upload {
-    /* border: 1px solid #ccc;
-    display: inline-block;
-    border-radius: 6px;
-    padding: 6px 12px;
-    cursor: pointer; */
-    margin: 10%;
-    text-align: center;
-    padding: 14px 12px;
-    font-size: 18px;
-  
-  }
-  
+.new{
+  margin-top: 50px;
+  margin-left: -150px;
+}
+.result{
+  margin-left: -150px;
+  margin-top: 100px;
+}
